[package]
name = "ctypeparser"
version = "0.1.0"
authors = ["Terry Chia <terrycwk1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
clang = "1.0.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
